fix image position on safari (#42)

--- a/docs/.vuepress/styles/home.styl
+++ b/docs/.vuepress/styles/home.styl
@@ -182,6 +182,7 @@
   .home .hero img {
     grid-column-start: 1;
     grid-column-end: -1;
+    position: absolute;
     right: 3rem;
     margin: 0;
     justify-self: flex-end;
